z-index fix for account dropdown

--- a/app/assets/stylesheets/dashboard/cards.scss
+++ b/app/assets/stylesheets/dashboard/cards.scss
@@ -46,7 +46,7 @@
     background: white;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    z-index: 99999;
+    z-index: 999;
     display: flex;
     justify-content: space-between;
     border-bottom: $card-border-bottom;
